k8s/policies/kyverno-policies.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: stockloom-require-signed-images
  annotations:
    policies.kyverno.io/title: Require Signed Images
    policies.kyverno.io/description: All StockLoom images must be signed with Cosign
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: check-image-signature
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: [stockloom]
      verifyImages:
        - imageReferences:
            - "docker.io/*/stockloom-*"
          attestors:
            - count: 1
              entries:
                - keyless:
                    subject: "https://github.com/Apurvbajpai2531/Stockloom/.github/workflows/*"
                    issuer: "https://token.actions.githubusercontent.com"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: stockloom-disallow-privileged
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
spec:
  validationFailureAction: Enforce
  rules:
    - name: no-privileged
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: [stockloom]
      validate:
        message: "Privileged containers are not allowed in StockLoom"
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(privileged): false
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: stockloom-require-resource-limits
spec:
  validationFailureAction: Enforce
  rules:
    - name: require-limits
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: [stockloom]
      validate:
        message: "Resource limits are required"
        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    memory: "?*"
                    cpu: "?*"
